gitops/apps/service-status/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-status-ingress
  namespace: gary-app
  labels:
    app: service-status
    managed-by: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: gary-app
    alb.ingress.kubernetes.io/healthcheck-success-codes: "200-399"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:014125597282:certificate/1249ba8a-b4bc-4254-bfda-f48d1c936d9e
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.x_forwarded_for.enabled=true,routing.http.x_forwarded_proto.enabled=true
    external-dns.alpha.kubernetes.io/hostname: service-status.garyzone.pro
spec:
  rules:
    - host: service-status.garyzone.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-status-service
                port:
                  number: 80
